agones/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agones-gameserver
spec:
  type:  LoadBalancer
  selector:
    agones.dev/gameserver: simple-game-server
  ports:
    - name: sg-lb-udp-port
      protocol: UDP
      port: 7654 # local port
      targetPort: 7654
