agones/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameserver-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/gs"
        backend:
          service:
            name: agones-gameserver
            port:
              number: 7654
